# CarlCraft

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
include/: arena.h  chunk.h  perlin.h
src/: arena.c  chunk.c  error_handling.c  main.c  perlin.c
